add my algo chekpoint1

--- a/DOM Project/index.html
+++ b/DOM Project/index.html
@@ -22,7 +22,7 @@
         <br> <br>
         <span><i class="fas fa-heart"></i></span>
         <h3> MacBook <br /> <span id="s1">200</span>$</h3>
-      <img src="/DOM Project/img/img.jpeg"  width="100"/>
+      <img src="/img/img.jpeg"  width="100"/>
         <br />
         <button id="a1" onclick="adding(this.id)">+</button>
         <span id="q1">0</span>
@@ -36,7 +36,7 @@
         <br> <br>
         <i class="fas fa-heart"></i>
         <h3> MacBook <br /> <span id="s2">4000</span>$</h3>
-      <img src="/DOM Project/img/img3.jpeg"  width="100"/>
+      <img src="/img/img3.jpeg"  width="100"/>
         <br />
         <button id="a2" onclick="adding(this.id)">+</button>
         <span id="q2">0</span>
@@ -50,7 +50,7 @@
         <br> <br>
         <i class="fas fa-heart"></i>
         <h3> MacBook <br /> <span id="s3">600</span>$</h3>
-      <img src="/DOM Project/img/img 2.jpeg" width="100"/>
+      <img src="/img/img 2.jpeg" width="100"/>
         <br />
         <button id="a3"onclick="adding(this.id)">+</button>
         <span id="q3">0</span>
@@ -62,6 +62,6 @@
       
       <div>TOTAL PRICE= <span id="totalp">0</span></div>
     </center>
-      <script src="/DOM Project/main.js"> </script>
+      <script src="main.js"> </script>
 </body>
 </html>
