--- a/Algo/algo2/index.html
+++ b/Algo/algo2/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-  <script src="/main.js"></script>  
+    <p> Hello  world</p>
+<script src="/main.js"></script>
 </body>
 </html>
